# softbuffer-visibility-repro

./: .gitignore  Cargo.toml  README.md  SOFTBUFFER_ISSUE.md  build-windows.sh
docs/plans/: 2026-03-27-dual-repro-binaries.md  2026-03-27-windows-cross-build-design.md  2026-03-27-windows-cross-build.md
src/: lib.rs
tests/: build-windows-help.sh  repro_modes.rs
